--- a/LibraryWebApp/Views/Home/Books.cshtml
+++ b/LibraryWebApp/Views/Home/Books.cshtml
@@ -21,7 +21,7 @@ else
         {
             <tr>
                 <th> <a asp-controller="Books" asp-action="Detail" asp-route-id="@book.Id"> @book.Title </a> </th>
-                <th>@book.Author</th>
+                <th>@book.AuthorLastName</th>
             </tr>
         }
     </table>
