--- a/LibraryWebApp/Views/Readers/Index.cshtml
+++ b/LibraryWebApp/Views/Readers/Index.cshtml
@@ -15,11 +15,13 @@ else
     <table>
         <tr>
             <th>Reader</th>
+            <th>Discount</th>
         </tr>
         @foreach (var reader in Model.Readers)
         {
             <tr>
                 <th> <a asp-controller="Readers" asp-action="Detail" asp-route-id="@reader.Id"> @reader.Name </a> </th>
+                <th>@reader.MembershipType.DiscountRate %</th>
             </tr>
         }
     </table>
