Added more coloumns to Reader & Book views

--- a/LibraryWebApp/Views/Books/Detail.cshtml
+++ b/LibraryWebApp/Views/Books/Detail.cshtml
@@ -9,4 +9,5 @@
 <div>
     <p>@Model.Title</p>
     <p>@Model.AuthorLastName, @Model.AuthorFirstName</p>
+    <p>@Model.Genre.GenreTypeName</p>
 </div>
