--- a/LibraryWebApp/Views/Readers/New.cshtml
+++ b/LibraryWebApp/Views/Readers/New.cshtml
@@ -23,4 +23,5 @@
             new SelectList(Model.MembershipTypes,"MembershipTypeId","MembershipTypeName"),
             "Select Membership Type...", new { @class = "form-control"})
     </div>
+    <button type="submit" class="btn btn-primary" >Save</button>
 }
