--- a/LibraryWebApp/Views/Readers/Index.cshtml
+++ b/LibraryWebApp/Views/Readers/Index.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h1>Readers</h1>
+<br />
+
+<a asp-controller="Readers" asp-action="New" class="btn btn-primary">New</a>
+<hr />
 
 @if (Model.Readers.Count == 0)
 {
