Added cancel buttons

--- a/LibraryWebApp/Views/Books/BookForm.cshtml
+++ b/LibraryWebApp/Views/Books/BookForm.cshtml
@@ -44,7 +44,8 @@
     </div>
 
     @Html.HiddenFor(b => b.Book.Id)
-    <button type="submit" class="btn btn-primary">Save</button> 
+    <button type="submit" class="btn btn-primary">Save</button>
+    @Html.ActionLink("Cancel", "Index", "Books", new { @class = "btn btn-primary"})
     <br /><br />
 }
 
