--- a/LibraryWebApp/Views/Readers/ReaderForm.cshtml
+++ b/LibraryWebApp/Views/Readers/ReaderForm.cshtml
@@ -26,5 +26,7 @@
 
     @Html.HiddenFor(r => r.Reader.Id)
     <button type="submit" class="btn btn-primary">Save</button>
-    <br /><br />
+    @Html.ActionLink("Cancel", "Index", "Readers", new { @class = "btn btn-primary" })
+    <br />
+    <br />
 }
