--- a/LibraryWebApp/Views/Books/BookForm.cshtml
+++ b/LibraryWebApp/Views/Books/BookForm.cshtml
@@ -45,7 +45,7 @@
 
     @Html.HiddenFor(b => b.Book.Id)
     <button type="submit" class="btn btn-primary">Save</button>
-    @Html.ActionLink("Cancel", "Index", "Books", new { @class = "btn btn-primary"})
+    @Html.ActionLink("Cancel", "Index", "Books", null, new { @class = "btn btn-primary" })
     <br /><br />
 }
 
