--- a/LibraryWebApp/Views/Readers/ReaderForm.cshtml
+++ b/LibraryWebApp/Views/Readers/ReaderForm.cshtml
@@ -11,12 +11,14 @@
     <div class="form-group">
         @Html.LabelFor(r => r.Reader.Name)
         @Html.TextBoxFor(r => r.Reader.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(r => r.Reader.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(r => r.Reader.MembershipTypeId)
         @Html.DropDownListFor(r => r.Reader.MembershipTypeId,
             new SelectList(Model.MembershipTypes, "MembershipTypeId", "MembershipTypeName"),
             "Select Membership Type...", new { @class = "form-control" })
+        @Html.ValidationMessageFor(r => r.Reader.MembershipTypeId)
     </div>
     <div class="form-check">
         <label>
@@ -26,7 +28,7 @@
 
     @Html.HiddenFor(r => r.Reader.Id)
     <button type="submit" class="btn btn-primary">Save</button>
-    @Html.ActionLink("Cancel", "Index", "Readers", new { @class = "btn btn-primary" })
+    @Html.ActionLink("Cancel", "Index", "Readers", null, new { @class = "btn btn-primary"})
     <br />
     <br />
 }
