--- a/LibraryWebApp/wwwroot/css/site.css
+++ b/LibraryWebApp/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 3px solid red;
+}
+
+.form-control.input-validation-error{
+    border: 3px solid red;
+}
