--- a/LibraryWebApp/Views/Books/BookForm.cshtml
+++ b/LibraryWebApp/Views/Books/BookForm.cshtml
@@ -11,36 +11,45 @@
     <div class="form-group">
         @Html.LabelFor(b => b.Book.Title)
         @Html.TextBoxFor(b => b.Book.Title, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.Title)
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.AuthorLastName)
         @Html.TextBoxFor(b => b.Book.AuthorLastName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.AuthorLastName)
+
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.AuthorFirstName)
         @Html.TextBoxFor(b => b.Book.AuthorFirstName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.AuthorFirstName)
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.Synopsis)
         @Html.TextBoxFor(b => b.Book.Synopsis, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.Synopsis)
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.PublishedYear)
         @Html.TextBoxFor(b => b.Book.PublishedYear, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.PublishedYear)
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.PublishedMonth)
         @Html.TextBoxFor(b => b.Book.PublishedMonth, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.PublishedMonth)
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.GenreId)
         @Html.DropDownListFor(b => b.Book.GenreId,
             new SelectList(Model.Genres, "GenreId", "GenreTypeName"),
             "Select Genre Type...", new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.GenreId)
     </div>
     <div class="form-group">
         @Html.LabelFor(b => b.Book.NumInStock)
         @Html.TextBoxFor(b => b.Book.NumInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(b => b.Book.NumInStock)
     </div>
 
     @Html.HiddenFor(b => b.Book.Id)
