--- a/LibraryWebApp/Views/Books/BookForm.cshtml
+++ b/LibraryWebApp/Views/Books/BookForm.cshtml
@@ -57,6 +57,12 @@
 
     <button type="submit" class="btn btn-primary">Save</button>
     @Html.ActionLink("Cancel", "Index", "Books", null, new { @class = "btn btn-primary" })
-    <br /><br />
+    <br />
+    <br />
 }
 
+@section Scripts
+{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
