--- a/LibraryWebApp/Views/Books/Index.cshtml
+++ b/LibraryWebApp/Views/Books/Index.cshtml
@@ -17,7 +17,7 @@
 else
 {
     <table class="table">
-        <tr>
+        <tr class="thead-light">
             <th>Title</th>
             <th>Author</th>
             <th>Genre</th>
