--- a/LibraryWebApp/Views/Readers/Index.cshtml
+++ b/LibraryWebApp/Views/Readers/Index.cshtml
@@ -17,7 +17,7 @@
 else
 {
     <table class="table">
-        <tr>
+        <tr class="thead-light">
             <th>Reader</th>
             <th>Membership</th>
             <th>Discount</th>
