--- a/LibraryWebApp/Views/Readers/Index.cshtml
+++ b/LibraryWebApp/Views/Readers/Index.cshtml
@@ -16,12 +16,13 @@
 }
 else
 {
-    <table class="table">
+    <table id="readers" class="table">
         <tr class="thead-light">
             <th>Reader</th>
             <th>Membership</th>
             <th>Discount</th>
             <th>On Newsletter?</th>
+            <th>Delete</th>
         </tr>
         @foreach (var reader in Model.Readers)
         {
@@ -30,7 +31,30 @@ else
                 <th>@reader.MembershipType.MembershipTypeName</th>
                 <th>@reader.MembershipType.DiscountRate %</th>
                 <th>@(reader.IsSubscribedToNewsletter == true ? "Yes" : "No")</th>
+                <th>
+                    <button data-reader-id="@reader.Id" class="btn-link js-delete">Delete</button>
+                </th>
             </tr>
         }
     </table>
+}
+
+@section Scripts
+{ 
+    <script>
+        $(document).ready(function () {
+            $("#readers .js-delete").on("click", function () {
+                var button = $(this);
+                if (confirm("Are you sure you want to delete this reader?")) {
+                    $.ajax({
+                        url: "/api/readers/" + button.attr("data-reader-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 }
