--- a/LibraryWebApp/Views/Readers/Index.cshtml
+++ b/LibraryWebApp/Views/Readers/Index.cshtml
@@ -43,17 +43,19 @@ else
 { 
     <script>
         $(document).ready(function () {
-            $("#readers .js-delete").on("click", function () {
+            $("#readers").on("click", ".js-delete", function () {
                 var button = $(this);
-                if (confirm("Are you sure you want to delete this reader?")) {
-                    $.ajax({
-                        url: "/api/readers/" + button.attr("data-reader-id"),
-                        method: "DELETE",
-                        success: function () {
-                            button.parents("tr").remove();
-                        }
-                    });
-                }
+                bootbox.confirm("Are you sure?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/readers/" + button.attr("data-reader-id"),
+                            method: "DELETE",
+                            success: function () {
+                                button.parents("tr").remove();
+                            }
+                        });
+                    }
+                });
             });
         });
     </script>
