Fixed book form validation error with Genre. Added DataTables and ajax jquery functionality.

--- a/LibraryWebApp/Views/Books/BookForm.cshtml
+++ b/LibraryWebApp/Views/Books/BookForm.cshtml
@@ -8,6 +8,10 @@
 
 @using (Html.BeginForm("Save", "Books"))
 {
+    <div>
+        @Html.ValidationSummary()
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(b => b.Book.Title)
         @Html.TextBoxFor(b => b.Book.Title, new { @class = "form-control" })
