--- a/LibraryWebApp/Views/Shared/_NavBar.cshtml
+++ b/LibraryWebApp/Views/Shared/_NavBar.cshtml
@@ -8,6 +8,9 @@
         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Rentals" asp-action="New">New Rental</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
                 </li>
                 <li class="nav-item">
