Added autocomplete via typeahead

--- a/LibraryWebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryWebApp/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lumen.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="~/lib/typeahead/dist/typeahead.css" />
 </head>
 <body>
     <header>
