--- a/LibraryWebApp/Views/Rentals/New.cshtml
+++ b/LibraryWebApp/Views/Rentals/New.cshtml
@@ -8,12 +8,57 @@
 
 <form>
     <div class="form-group">
-        <label>Reader</label>
-        <input type="text" value="" class="form-group" />
+        <label>Reader</label><br />
+        <input id="readers" type="text" class="typeahead" placeholder="Reader..." />
     </div>
-    <div class="form-group">
-        <label>Book</label>
-        <input type="text" value="" class="form-group" />
+    <div class="form-group" id="typeahead">
+        <label>Book</label><br />
+        <input id="books" type="text" class="typeahead" placeholder="Book..."/>
     </div>
     <button class="btn btn-primary">Submit</button>
 </form>
+
+@section Scripts
+{ 
+<script>
+    $(document).ready(function () {
+        var readers = new Bloodhound({
+            datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
+            queryTokenizer: Bloodhound.tokenizers.whitespace,
+            prefetch: '/api/readers',
+            remote: {
+                url: '/api/readers?query=%QUERY',
+                wildcard: '%QUERY'
+            }
+        });
+
+        var books = new Bloodhound({
+            datumTokenizer: Bloodhound.tokenizers.obj.whitespace('title'),
+            queryTokenizer: Bloodhound.tokenizers.whitespace,
+            prefetch: '/api/books',
+            remote: {
+                url: '/api/books?query=%QUERY',
+                wildcard: '%QUERY'
+            }
+        });
+
+        $('#readers').typeahead({
+            minlength: 0,
+            highlight: true
+        }, {
+            name: 'readers',
+            display: 'name',
+            source: readers
+        });
+
+        $('#books').typeahead({
+            minlength: 0,
+            highlight: true
+        }, {
+            name: 'books',
+            display: 'title',
+            source: books
+        });
+    });
+</script>
+}
