--- a/LibraryWebApp/Views/Rentals/New.cshtml
+++ b/LibraryWebApp/Views/Rentals/New.cshtml
@@ -8,17 +8,28 @@
 
 <form>
     <div class="form-group">
-        <label>Reader</label><br />
-        <input id="readers" type="text" class="typeahead" placeholder="Reader..." />
+        <label style="font-family:'Segoe UI'">Reader</label>
+        <div class="typeahead">
+            <input id="readers" type="text" class="typeahead" style="border-radius: 3px" placeholder=" Reader..." />
+        </div>
     </div>
     <div class="form-group" id="typeahead">
-        <label>Book</label><br />
-        <input id="books" type="text" class="typeahead" placeholder="Book..."/>
+        <label style="font-family:'Segoe UI'">Book</label>
+        <div class="typeahead">
+            <input id="books" type="text" class="typeahead" style="border-radius: 3px" placeholder=" Book..." />
+        </div>
     </div>
 
-    <ul id="booksList" class="list-group"></ul>
+    <div class="row">
+        <div class="col-md-4">
+            <ul id="booksList" class="list-group"></ul>
+        </div>
+    </div>
+    <br />
+    <div>
+        <button class="btn btn-primary">Submit</button>
+    </div>
 
-    <button class="btn btn-primary">Submit</button>
 </form>
 
 @section Scripts
@@ -72,7 +83,7 @@
         }).on('typeahead:select', function (e, book) {
             console.log(book.title);
 
-            $('#booksList').append("<li>" + book.title + "</li>");
+            $('#booksList').append("<li class='list-group-item'>" + book.title + "</li>");
             $('#books').typeahead('val', '');
 
             vm.bookIds.push(book.id);
