--- a/LibraryWebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryWebApp/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-lumen.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="~/lib/typeahead/dist/typeahead.css" />
+    <link rel="stylesheet" type="text/css" href="~/lib/toastr/dist/toastr.min.css" />
 </head>
 <body>
     <header>
@@ -33,6 +34,7 @@
     <script src="~/lib/bootbox/dist/bootbox.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
     <script src="~/lib/typeahead/dist/typeahead.bundle.min.js"></script>
+    <script src="~/lib/toastr/dist/toastr.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
