--- a/LibraryWebApp/Views/Rentals/New.cshtml
+++ b/LibraryWebApp/Views/Rentals/New.cshtml
@@ -10,7 +10,7 @@
     <div class="form-group">
         <label style="font-family:'Segoe UI'">Reader</label>
         <div class="typeahead">
-            <input id="readers" required type="text" class="typeahead" style="border-radius: 3px" placeholder=" Reader..." />
+            <input id="readers" type="text" class="typeahead" style="border-radius: 3px" placeholder=" Reader..." />
         </div>
     </div>
     <div class="form-group" id="typeahead">
@@ -100,6 +100,12 @@
                     contentType: "application/json"
                 })
                     .done(function () {
+                        $('#books').typeahead('val', '');
+                        $('#readers').typeahead('val', '');
+                        $('#booksList').empty();
+
+                        vm = { bookIds =[] };
+
                         toastr.success("Rental Succesfully Posted");
                     })
                     .fail(function () {
